--- a/schoolBackend/src/main/resources/application.properties
+++ b/schoolBackend/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.datasource.password=postgres
 
 application.jwtSecret=prgKodecSecretKey
 #10 days = 864000000; 1 h = 3600000; 10 min = 600000
-application.jwtExpirationMs=3600000
+application.jwtExpirationMs=864000000
